RESOLVED FIXED307366
Suppress a uncounted local variable warning for WebRunLoop in callOnMainThread
https://bugs.webkit.org/show_bug.cgi?id=307366
Summary Suppress a uncounted local variable warning for WebRunLoop in callOnMainThread
Ryosuke Niwa
Reported 2026-02-09 13:45:00 PST
We can ignore this warning since WebRunLoop is a singleton.
Attachments
Ryosuke Niwa
Comment 1 2026-02-09 13:50:07 PST
EWS
Comment 2 2026-02-09 14:22:51 PST
Committed 307107@main (45157cd6a28e): <https://commits.webkit.org/307107@main> Reviewed commits have been landed. Closing PR #58233 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-02-09 14:23:13 PST
Note You need to log in before you can comment on or make changes to this bug.