Suppress a uncounted local variable warning for WebRunLoop in callOnMainThread https://bugs.webkit.org/show_bug.cgi?id=307366

Reviewed by Darin Adler.

Suppress this warning since WebRunLoop is a singleton and therefore will never
be destructed once constructed.

* Source/WTF/wtf/MainThread.cpp:
(WTF::callOnMainThread):

Canonical link: https://commits.webkit.org/307107@main